# aaronson-oracle-baseball

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  MODEL_CARD.md  PLAN.md  README.md  app.py  constants.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: run.py
backend/app/: __init__.py  database.py  main.py
backend/app/models/: database.py  schemas.py
backend/app/routers/: live.py  players.py  predictions.py
backend/app/services/: baseball.py  mlb_live.py  predictors.py
backend/app/services/predictors/: __init__.py  base.py  frequency.py  markov.py  naive.py  ngram.py  transformer.py  tree.py
data/: pitch_map.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: GameSelector.jsx  LiveGame.jsx  LiveGameSelector.jsx  ModelComparison.jsx  PitchGuessPanel.jsx  PlaybackGame.jsx  PlayerSelector.jsx
templates/: index.html
training/: benchmark.py  benchmark_results.json  bulk_download.py  download_starters.py  experiment_loss.py  experiment_temperature.py  pitchers.json  prepare.py  program.md  results.tsv  sync_db.py  sync_from_csv.py  train.py
training/autoresearch/: prepare.py
training/models/: __init__.py  frequency.py  markov.py  naive.py  ngram.py  transformer.py  tree.py
